fixed margins on mobile

--- a/src/components/DogDetails/DogDetails.css
+++ b/src/components/DogDetails/DogDetails.css
@@ -119,10 +119,12 @@ hr {
 }
 
 .details-container {
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 40rem;
+    max-width: 40rem;
+    min-width: 20rem;
 }
 
 .more-details {
@@ -137,7 +139,7 @@ hr {
     padding: 1rem;
     margin: 2rem;
     max-width: 35rem;
-    min-height: 8rem;
+    min-height: 9rem;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -150,7 +152,7 @@ hr {
 }
 
 .buttons-container {
-    margin: 3rem 0 0;
+    margin: 1rem 0 0;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -172,6 +174,7 @@ hr {
 .midSection-decor {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .leftSide {
@@ -211,7 +214,7 @@ hr {
 }
 
 .rightSide-decor {
-    margin: 0;
+    margin: 1.2em 0;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
